<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.mq</groupId>
	<artifactId>iot.application</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>iot.application</name>
	<url>http://maven.apache.org</url>

	<properties>
		<java.version>14</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit-platform-surefire-provider-version>1.0.1</junit-platform-surefire-provider-version>
		<junit-launcher-version>1.0.1</junit-launcher-version>
		<junit-jupiter-version>5.5.1</junit-jupiter-version>

		<spring-version>5.0.4.RELEASE</spring-version>

		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
		<jacoco.version>0.8.5</jacoco.version>
		<surefire-plugin-version>2.19.1</surefire-plugin-version>
		<surefire-provider-version>1.0.1</surefire-provider-version>
		<mockito-version>2.25.0</mockito-version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>de.mq</groupId>
			<artifactId>iot.domain</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>


		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-jupiter-version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter-version}</version>
			<scope>test</scope>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito-version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.9.5</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.5</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.13.2</version>
		</dependency>


		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.8.2</version>
		</dependency>


		<dependency>
			<groupId>org.jeasy</groupId>
			<artifactId>easy-rules-core</artifactId>
			<version>3.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.jeasy</groupId>
			<artifactId>easy-rules-support</artifactId>
			<version>3.2.0</version>
		</dependency>



		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring-version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>


		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>-Xlint:all</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire-plugin-version}</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>${surefire-provider-version}</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit-jupiter-version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>${argLine} --enable-preview</argLine>
				</configuration>
			</plugin>

			<plugin>

				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<!-- version>0.7.4.201502262128</version -->

				<version>${jacoco.version}</version>



				<configuration>



					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>


						</goals>

					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>

						<goals>
							<goal>report</goal>

						</goals>

					</execution>

				</executions>


			</plugin>



		</plugins>
	</build>


</project>
